libs/components/errors/testing/src/modules/error/error-harness-filters.ts
import { SkyHarnessFilters } from '@skyux/core/testing';

/**
 * A set of criteria that can be used to filter a list of `SkyErrorHarness` instances.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface, @typescript-eslint/no-empty-object-type
export interface SkyErrorHarnessFilters extends SkyHarnessFilters {}
